Fix explore buttons having wrong font on Windows

--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -66,6 +66,7 @@ button.filter_button {
   border-radius: 16px;
   cursor: pointer;
   transition: background-color 0.2s, color 0.2s;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a.topic_tile div.container:has(> .tag_list) {
